[project]
name = "UltraFlow"
version = "0.1.2"
description = "A comprehensive toolkit for streamlined development, testing, and deployment of prompt."
authors = [
    {name = "Henry He", email = "henryhyn@163.com"},
]
dependencies = [
    "requests>=2.32.4",
    "marshmallow==3.23.3",
    "promptflow==1.16.2",
    "click>=8.1.8",
    "json-repair>=0.44.1",
]
requires-python = "!=3.13.*,>=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
uf = "ultraflow.cli.main:app"

[tool.pdm]
distribution = true
