[project]
name = "UltraFlow"
version = "0.1.7"
description = "A comprehensive toolkit for streamlined development, testing, and deployment of prompt."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Henry He", email = "henryhyn@163.com"},
]
requires-python = "!=3.13.*,>=3.9"
dependencies = [
    "marshmallow==3.23.3",
    "promptflow==1.16.2",
    "json-repair==0.44.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.0",
]
docs = [
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.urls]
Repository = "https://github.com/enthusa/UltraFlow"

[project.scripts]
uf = "ultraflow.cli.main:app"

[tool.pdm]
distribution = true

[tool.ruff]
respect-gitignore = true
target-version = "py39"
line-length = 120
src = ["src"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
extend-select = [
  "I",    # isort
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "FA",   # flake8-future-annotations
  "PGH",  # pygrep-hooks
  "RUF",  # ruff
  "W",    # pycodestyle
  "UP",   # pyupgrade
  "YTT",  # flake8-2020
]
extend-ignore = ["B018", "B019", "RUF018"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.pdm.scripts]
format = "ruff format ."
lint = "ruff check . --fix"
test = "pytest"
